10 zadanie, latex to do

--- a/zad10/opracowanie/opracowanie.tex
+++ b/zad10/opracowanie/opracowanie.tex
@@ -49,5 +49,5 @@ Falsi iteracje:  40\newline
 Falsi:  [2.5857864434036886, 4.0, 6]\newline
 Sieczne iteracje:  15\newline
 Siecznych:  [2.5857864376268997, 4.0, 5.414213562373092]\newline
-Jak widać najszybciej z nich wszystkich poradziła sobie metoda siecznych, która praktycznie trzy-krotnie skróciła naszą ilośc iteracji
+Jak widać najszybciej z nich wszystkich poradziła sobie metoda siecznych, która praktycznie trzy-krotnie skróciła naszą ilośc iteracji. Jest ona zdecydowanie najsyzbsze z tych 3 omówionych
 \end{document}
